--- a/stylesL.css
+++ b/stylesL.css
@@ -79,3 +79,22 @@ body {
         padding: 20px;
     }
 }
+
+.password-container {
+    position: relative;
+}
+
+#toggle-password {
+    position: absolute;
+    right: 10px;
+    top: 8px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 12px;
+    color: #555;
+}
+
+#toggle-password:focus {
+    outline: none;
+}
